--- a/Week2/index.html
+++ b/Week2/index.html
@@ -1,60 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis"></script>
+
 </head>
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
-<script lang="js">
-    model = tf.sequential()
-
-    model.add(tf.layers.cov2d({
-        inputShape: [28, 28, 1],
-        kernelSize: 3,
-        filters: 8,
-        activation: "relu"
-    }));
-    model.add(tf.layers.maxPooling2d({poolSize: [2, 2]}));
-
-    model.add({
-        kernelSize: 3,
-        filters: 16,
-        activation: "relu"
-    });
-    model.add(tf.layers.maxPooling2d({poolSize: [2, 2]}));
-
-    model.add(tf.layers.flatten());
-
-    model.add(tf.layers.dense({
-        units: 128,
-        activation: 'relu'
-    }));
-
-    model.add(tf.layers.dense({
-        units: 10,
-        activation: 'softmax'
-    }));
-
-    model.compile({
-        optimizer: tf.train.adam(),
-        loss: 'categoricalCrossentropy',
-        metrics: ['accuracy']
-    });
-
-    model.fit(trainX, trainY, {
-        batchSize: BATCH_SIZE,
-        validationData: [testX, testY],
-        epochs: 20,
-        shuffle: true,
-        callbacks: fitCallbacks
-    })
-</script>
-
 <body>
-    <h1>First HTML Page</h1>
+    <h1>Handwriting Classifier!</h1>
+    <canvas id="canvas" width="280" height="280" style="position:absolute;top:100;left:100;border:8px solid;"></canvas>
+    <img id="canvasimg" style="position:absolute;top:10%;left:52%;width=280;height=280;display:none;">
+    <input type="button" value="classify" id="sb" size="48" style="position:absolute;top:400;left:100;">
+    <input type="button" value="clear" id="cb" size="23" style="position:absolute;top:400;left:180;">
+    <script src="data.js" type="module"></script>
+    <script src="abc.js" type="module"></script>
 </body>
-
 </html>
